--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-scripts": "5.0.1",
+    "react-tooltip": "^5.25.0",
     "redux": "^4.2.1",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
