--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
+    "clipboard-copy": "^4.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
     "react-datepicker": "^4.20.0",
